one more try on ios button spacing issue

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
   color: white;
   font-size: 1.2rem;
   padding: 0;
+  margin: 0;
   border: none;
   border-top: 1px solid #4d4d4d;
   border-left: 1px solid #4d4d4d;
